...
          SpacedRow(
            space: 5,
            mainAxisAlignment: MainAxisAlignment.center,
            children: [
              const CustomText(text: ConstantText.forNewUser),
              CustomTextButton(
                key: const Key("route_reg"),
                text: ConstantText.signUp,
                onPressed: () => Navigator.of(context)
                    .pushNamed(AppRoutes.routeToRegistrationPage),
              ),
            ],
          ),
...
